# rhcp-chatbot

./: .gitignore  .pre-commit-config.yaml  .sequelizerc  DEVELOPMENT_DIARY.md  Dockerfile  EXAMPLES.md  FEATURES.md  IMPROVEMENTS_SUMMARY.md  ML_PIPELINE_README.md  NOTEBOOK_FIXES.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  README.md  app.js  cli.py  debug_model.py  docker-compose.yml  model_training.ipynb  mypy.ini  package-lock.json  package.json  personal-logs  pyproject.toml  requirements.txt  requirements_ml.txt  rhcp_chatbot.db  test.db  test_training.py
.github/workflows/: ci.yml
app/: config.py  errors.py  main.py  schemas.py
app/chatbot/: initializer.py  memory.py  processor.py
app/core/: auth.py  config.py  database.py  inference.py  session.py
app/infra/: __init__.py  logging.py
app/knowledge/: __init__.py  resolver.py  search.py
app/models/: logistic_regression_classifier.joblib  user.py
app/scripts/: setup_nltk.py
app/services/: auth.py
config/: data_config.yaml  training_config.yaml
data/: README.md  corpus.json  rhcp-corpus.json  rhcp_fts.sqlite
data/eval/: hard_negatives.jsonl  results.json
data/knowledge/: albums.yml  members.yml  songs.yml
data/models/: logistic_regression_classifier.joblib  (+1 more)
docs/: API_DOCUMENTATION.md  COMPONENT_DOCUMENTATION.md  Chapter_1_System_Architecture.md  Chapter_2_Development_Log.md  Chapter_3_Refined_Implementation_Strategy.md  Chapter_4_Development_Guidelines_and_Documentation_Standards.md  Chapter_5_Initial_Implementation_Plan.md  Chapter_6_High_Level_Development_Roadmap.md  DEVELOPMENT_GUIDE.md  PROMPT_ENGINEERING_FOR_AI_AGENTS.md  README.md  RHCP_Chatbot_Development_Book.md  USAGE_GUIDE.md
notebooks/: cell2.py  model_training.ipynb  model_training_refactored.ipynb
rhcp-chatbot-py/: .gitignore  Dockerfile  README.md  requirements.txt
rhcp-chatbot-py/app/: main.py
scripts/: build_fts.py  evaluate.py  performance_test.py
seeders/: 20240310000000-rhcp-corpus.js
src/: app.js  chatbotProcessor.js  initializer.js
test/: chatbotProcessor.test.js
tests/: test_auth.py  test_chatbot.py  test_config.py  test_evaluate_smoke.py  test_health.py  test_inference.py  test_inference_integration.py  test_logging.py  test_ready_model.py  test_regression.py  test_resolver.py  test_search.py  test_validation.py
(+60 files in other folders)
